--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
   <groupId>com.github.celldynamics.quimp.boaplugin</groupId>
   <artifactId>MedianSnakeFilter-quimp</artifactId>
   <packaging>jar</packaging>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>1.0.0</version>
   <!-- Name and licencing and other project informations -->
   <name>MedianSnakeFilter-quimp</name>
   <url>www.warwick.ac.uk/quimp</url>
@@ -38,7 +38,7 @@
     <connection>scm:git:https://github.com/CellDynamics/MedianSnakeFilter_quimp.git</connection>
     <developerConnection>scm:git:https://github.com/CellDynamics/MedianSnakeFilter_quimp.git</developerConnection>
     <url>https://github.com/CellDynamics/MedianSnakeFilter_quimp</url>
-    <tag>HEAD</tag>
+    <tag>v1.0.0</tag>
   </scm>
   <issueManagement>
     <system>GitHub</system>
