--- a/pom.xml
+++ b/pom.xml
@@ -157,6 +157,11 @@
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
     </dependency>
+    <dependency>
+    	<groupId>org.mockito</groupId>
+    	<artifactId>mockito-core</artifactId>
+    	<scope>test</scope>
+    </dependency>
   </dependencies>
   <reporting>
     <plugins>
